samples/_failures_safe/1761153117_aec085_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_062e336a.c: In function ‘main’:
./samples/SAFE/__tmp_062e336a.c:150:71: error: expected ‘)’ at end of input
  150 |             a.cols = read_int("Enter columns for matrix A (1-10): ", 1
      |                              ~                                        ^
      |                                                                       )
./samples/SAFE/__tmp_062e336a.c:150:22: error: too few arguments to function ‘read_int’
  150 |             a.cols = read_int("Enter columns for matrix A (1-10): ", 1
      |                      ^~~~~~~~
./samples/SAFE/__tmp_062e336a.c:15:5: note: declared here
   15 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_062e336a.c:150:13: error: expected declaration or statement at end of input
  150 |             a.cols = read_int("Enter columns for matrix A (1-10): ", 1
      |             ^
./samples/SAFE/__tmp_062e336a.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_062e336a.c:150:13: error: expected declaration or statement at end of input
